[tool.poetry]
name = "md410_2020_conv_reg_form_overall_creator"
version = "0.1.0"
description = "Script and flask app to coordinate S3 data retrieval, docker markdown and PDF creation and S3 upload of a completed form"
authors = ["Kim van Wyk <kimv@sahomeloans.com>"]

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.9"
docker = "^4.0"
pika = "^1.1"
flask = "^1.1"
Flask-BasicAuth = "^0.2.0"
requests = "^2.22"
fastapi = "^0.38.1"
uvicorn = "^0.9.0"

[tool.poetry.dev-dependencies]
ptpython = "^2.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
