[tool.poetry]
name = "md410_2020_conv_reg_form_overall_creator"
version = "0.1.0"
description = "Script and flask app to coordinate S3 data retrieval, docker markdown and PDF creation and S3 upload of a completed form"
authors = ["Kim van Wyk <kimv@sahomeloans.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.9"
docker = "^4.0"
sqlalchemy = "^1.3"
psycopg2-binary = "^2.8"
pyperclip = "^1.7"
inquirer = "^2.6"
pdfkit = "^0.6.1"
md410-2020-conv-common = "^0.8"

[tool.poetry.dev-dependencies]
ptpython = "^2.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
